# poc-openchemie-api

./: Dockerfile  Makefile  OpenChemIEDemo.ipynb  README.md  app.py  pyproject.toml  requirements.txt
src/: cli.py  requirements.txt
